[gd_scene load_steps=4 format=3 uid="uid://dwdi83m5gmqon"]

[ext_resource type="Script" path="res://addons/song_maker/song_maker_dock.gd" id="1_j60fo"]
[ext_resource type="PackedScene" uid="uid://1c02njcyq7ql" path="res://addons/song_maker/track_name.tscn" id="2_hcaoj"]
[ext_resource type="PackedScene" uid="uid://xbu3137iaunq" path="res://addons/song_maker/track_data.tscn" id="2_jpyfv"]

[node name="SongMakerDock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j60fo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TrackNames" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Track" parent="VBoxContainer/HSplitContainer/TrackNames" instance=ExtResource("2_hcaoj")]
layout_mode = 2

[node name="Track2" parent="VBoxContainer/HSplitContainer/TrackNames" instance=ExtResource("2_hcaoj")]
layout_mode = 2

[node name="Track3" parent="VBoxContainer/HSplitContainer/TrackNames" instance=ExtResource("2_hcaoj")]
layout_mode = 2

[node name="Track4" parent="VBoxContainer/HSplitContainer/TrackNames" instance=ExtResource("2_hcaoj")]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="TrackData" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Track" parent="VBoxContainer/HSplitContainer/ScrollContainer/TrackData" instance=ExtResource("2_jpyfv")]
layout_mode = 2

[node name="Track2" parent="VBoxContainer/HSplitContainer/ScrollContainer/TrackData" instance=ExtResource("2_jpyfv")]
layout_mode = 2

[node name="Track3" parent="VBoxContainer/HSplitContainer/ScrollContainer/TrackData" instance=ExtResource("2_jpyfv")]
layout_mode = 2

[node name="Track4" parent="VBoxContainer/HSplitContainer/ScrollContainer/TrackData" instance=ExtResource("2_jpyfv")]
layout_mode = 2

[node name="SaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save"

[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
